# D100_project

./: .flake8  README.md  environment.yml  pyproject.toml  setup.cfg
analyses/: eda_cleaning.ipynb  model_training.py
d100_d400_project/analyses/: eda_cleaning.ipynb  model_training.py
d100_d400_project/modules/feature_engineering/: _ordinalEncoder.py
d100_d400_project/modules/plotting/: __init__.py  plotting.py
data/: cleaned_dataset.parquet
modules/data_prep/: __init__.py  _handle_skewness.py  _load_data.py  _sample_split.py
modules/evaluation/: __init__.py  _evaluate.py
modules/feature_engineering/: __init__.py  _ordinalEncoder.py  _winsorizer.py
modules/path/: __init__.py  _path_helper.py
modules/plotting/: __init__.py  plotting.py
test/: test_ordinalencoder.py
