[metadata]
name = d100_d400_project
description = Fundamentals of Data Science and Research Computing Combined Project
long_description = file: README.md
long_description_content_type = text/markdown
author = 3361B
version = 0.1.0

[options]
include_package_data = true
python_requires = >=3.8
install_requires =
    pip
    pre-commit
    pytest>=6
    pytest-cov
    setuptools-scm
    pandas
    numpy
    scipy
    dask-ml
    ydata-profiling
    ipykernel
    matplotlib
    seaborn
    scikit-learn>=1.3.0
    lightgbm
    xgboost
    glum
    statsmodels
    shap
    dalex
    nbformat>=4.2.0
packages = find:

[options.packages.find]
include =
    data_project
